20020121
 - (djm) Rework ssh-rand-helper:
   - Reduce quantity of ifdef code, in preparation for ssh_rand_conf
   - Always seed from system calls, even when doing PRNGd seeding
   - Tidy and comment #define knobs
   - Remove unused facility for multiple runs through command list
   - KNF, cleanup, update copyright

20020114
 - (djm) Bug #50 - make autoconf entropy path checks more robust

20020108
 - (djm) Merge Cygwin copy_environment with do_pam_environment, removing 
   fixed env var size limit in the process. Report from Corinna Vinschen 
   <vinschen@redhat.com>
 - (stevesk) defines.h: use "/var/spool/sockets/X11/%u" for HP-UX.  does
   not depend on transition links.  from Lutz Jaenicke.

20020106
 - (stevesk) defines.h: determine _PATH_UNIX_X; currently "/tmp/.X11-unix/X%u"
   for all platforms except HP-UX, which is "/usr/spool/sockets/X11/%u".

20020105
 - (bal) NCR requies use_pipes to operate correctly.
 - (stevesk) fix spurious ; from NCR change.

20020103
 - (djm) Use bigcrypt() on systems with SCO_PROTECTED_PW. Patch from 
   Roger Cornelius <rac@tenzing.org>

20011229
 - (djm) Apply Cygwin pointer deref fix from Corinna Vinschen 
   <vinschen@redhat.com> Could be abused to guess valid usernames
 - (djm) Typo in contrib/cygwin/README Fix from Corinna Vinschen
   <vinschen@redhat.com>

20011228
 - (djm) Remove recommendation to use GNU make, we should support most
   make programs.

20011225
 - (stevesk) [Makefile.in ssh-rand-helper.c]
   portable lib and __progname support for ssh-rand-helper; ok djm@

20011223
 - (bal) Removed contrib/chroot.diff and noted in contrib/README that it
   was not being maintained.

20011222
 - (djm) Ignore fix & patchlevel in OpenSSL version check. Patch from 
   solar@openwall.com
 - (djm) Rework entropy code. If the OpenSSL PRNG is has not been 
   internally seeded, execute a subprogram "ssh-rand-helper" to obtain
   some entropy for us. Rewrite the old in-process entropy collecter as
   an example ssh-rand-helper.