@@ -1,3 +1,12 @@
+20020122
+ - (djm) autoconf hacking:
+   - We don't support --without-zlib currently, so don't allow it.
+   - Rework cryptographic random number support detection. We now detect 
+     whether OpenSSL seeds itself. If it does, then we don't bother with 
+     the ssh-rand-helper program. You can force the use of ssh-rand-helper
+     using the --with-rand-helper configure argument
+   - Simplify and clean up ssh-rand-helper configuration
+
 20020121
  - (djm) Rework ssh-rand-helper:
    - Reduce quantity of ifdef code, in preparation for ssh_rand_conf
@@ -7144,4 +7153,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1721 2002/01/21 12:44:12 djm Exp $
+$Id: ChangeLog,v 1.1722 2002/01/22 10:57:53 djm Exp $
